lang/checker/tests/cases/fail/local-assign/wrong_callback.slt
type Callback = (value: string) -> number
local that: Callback = function(value: number) -> string
	return "Hi"
end